[gd_scene load_steps=6 format=3 uid="uid://vdljtnoqe14c"]

[ext_resource type="LabelSettings" uid="uid://cmeebpnmwon04" path="res://assets/font_001_72.tres" id="1_cd0eg"]
[ext_resource type="FontFile" uid="uid://bgh21oe2kc8p" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="1_j222o"]
[ext_resource type="Script" path="res://scenes/game_over_ui/game_over_ui.gd" id="1_ofdy6"]
[ext_resource type="AudioStream" uid="uid://bki2qokvdva6y" path="res://assets/audio/game_over.wav" id="3_2sc8l"]

[sub_resource type="LabelSettings" id="LabelSettings_li2ey"]
font = ExtResource("1_j222o")
font_size = 48
outline_size = 2
outline_color = Color(0.531051, 0.531051, 0.531051, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[node name="GameOverUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ofdy6")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -36.5
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
text = "GAME OVER"
label_settings = ExtResource("1_cd0eg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpaceLabel2" type="LineEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -34.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_j222o")
theme_override_font_sizes/font_size = 60
alignment = 1

[node name="SpaceLabel" type="Label" parent="SpaceLabel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -32.0
offset_right = 134.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE"
label_settings = SubResource("LabelSettings_li2ey")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 402)
stream = ExtResource("3_2sc8l")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
